--- a/MVC_Babel/MVC_Babel.csproj
+++ b/MVC_Babel/MVC_Babel.csproj
@@ -174,6 +174,7 @@
     <Content Include="webpack.config.js" />
     <Content Include="package.json" />
     <Content Include=".babelrc" />
+    <Content Include="README.md" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
